Stop screen scrolling to the left on mobile on resume.html

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
    height:100%;
    width: 100%;
    font-family: 'Slabo 27px', serif;
-   
+   overflow-x: hidden;
   
    
 }
